[gd_scene load_steps=6 format=3 uid="uid://d3i3vbrtigpun"]

[ext_resource type="Script" path="res://scripts/EnemyBase.gd" id="1_7rld2"]
[ext_resource type="Resource" uid="uid://mjv2gs4ea7yp" path="res://resources/Enemies/Slime.tres" id="2_onrmh"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lmy45"]
height = 4.0
radius = 1.56316

[sub_resource type="CylinderShape3D" id="CylinderShape3D_q7sqs"]
radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pd75g"]
height = 8.0
radius = 10.0

[node name="EnemyBase" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_7rld2")
_actor_resource = ExtResource("2_onrmh")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("CylinderShape3D_lmy45")

[node name="MeshInstance3D" type="Node3D" parent="."]

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
shape = SubResource("CylinderShape3D_q7sqs")

[node name="MeshHolder" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_pd75g")

[node name="AttackSpeed" type="Timer" parent="."]
wait_time = 0.5

[node name="WanderTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="AttackSpeed" to="." method="_on_attack_speed_timeout"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_wander_timer_timeout"]
